Create Dark/Light Mode

--- a/app/Translation/locales/ar/translation.json
+++ b/app/Translation/locales/ar/translation.json
@@ -1,20 +1,26 @@
 {
-    "account":" الملف الشخصي",
-    "favourite":" المفضلة ",
-    "history":" سجل الطلبات",
-    "my-queue" : " قائمة الانتظار ",
-    "notifications":" الاشعارات ",
-    "home":" الرئيسية ",
-    "business":" الاعمال ",
-    "help":" المساعدة ",
-    "settings":" الاعدادات ",
-    "inbox":" الرسائل ",
-    "how-to-use":" كيفية استخدام التطبيق ",
+    "account": " الملف الشخصي",
+    "favourite": " المفضلة ",
+    "history": " سجل الطلبات",
+    "my-queue": " قائمة الانتظار ",
+    "notifications": " الاشعارات ",
+    "home": " الرئيسية ",
+    "business": " الاعمال ",
+    "help": " المساعدة ",
+    "settings": " الاعدادات ",
+    "inbox": " الرسائل ",
+    "how-to-use": " كيفية استخدام التطبيق ",
     "my-queues": " قائمة الانتظار ",
-    "moveQueue":" تحويل الانتظار ",
-    "exitQueue":" خروج من الانتظار ",
-    "head-of-queue":" الانتظار ",
-    "your-number":" رقمك ",
-    "now-serving":" الان يخدم ",
-    "estimate-time":" الوقت المقدر "
+    "moveQueue": " تحويل الانتظار ",
+    "exitQueue": " خروج من الانتظار ",
+    "head-of-queue": " الانتظار ",
+    "your-number": " رقمك ",
+    "now-serving": " الان يخدم ",
+    "estimate-time": " الوقت المقدر ",
+    "update-your-information": " تحديث معلوماتك ",
+    "logout": " تسجيل الخروج ",
+    "delete-account": " حذف الحساب ",
+    "setting": " الاعدادات ",
+     "change_to_dark":" تغيير الوضع الليلي ",
+    "change_to_light":" تغيير الوضع النهاري "
 }
