--- a/app/Translation/locales/en/translation.json
+++ b/app/Translation/locales/en/translation.json
@@ -1,26 +1,31 @@
 {
-    "account":"Account",
-    "favourite":"Favourite",
-    "history":"History Log",
-    "my-queue" : "My Queue",
-    "notifications":"Notifications",
-    "home":"Home",
-    "business":"Business",
-    "help":"Help",
-    "settings":"Settings",
-    "inbox":"Inbox",
-    "how-to-use":"How to use",
-    "my-queues":"My Queues",
-    "moveQueue":"Move Queue",
-    "exitQueue":"Exit Queue",
-    "head-of-queue":"AHEAD OF QUEUE",
-    "your-number":"Your Number",
-    "now-serving":"Now Serving",
-    "estimate-time":"Estimate Time",
-    "update-your-information":"Update information",
-    "logout":"Logout",
-    "delete-account":"Delete Account",
-    "setting":"Setting",
-    "change_to_dark":"Change to Dark Mode",
-    "change_to_light":"Change to Light Mode"
+    "account": "Account",
+    "favourite": "Favourite",
+    "history": "History Log",
+    "my-queue": "My Queue",
+    "notifications": "Notifications",
+    "home": "Home",
+    "business": "Business",
+    "help": "Help",
+    "settings": "Settings",
+    "inbox": "Inbox",
+    "how-to-use": "How to use",
+    "my-queues": "My Queues",
+    "moveQueue": "Move Queue",
+    "exitQueue": "Exit Queue",
+    "head-of-queue": "AHEAD OF QUEUE",
+    "your-number": "Your Number",
+    "now-serving": "Now Serving",
+    "estimate-time": "Estimate Time",
+    "update-your-information": "Update information",
+    "logout": "Logout",
+    "delete-account": "Delete Account",
+    "setting": "Setting",
+    "change_to_dark": "Change to Dark Mode",
+    "change_to_light": "Change to Light Mode",
+    "clients-in-queue": " CLIENTS IN QUEUE ",
+    "book": "BOOK",
+    "ok": "OK",
+    "close": "CLOSE",
+    "exist-alert": "Are You Sure To Exist Queue ?"
 }
