finish Dark And Light Theme

--- a/app/Translation/locales/ar/translation.json
+++ b/app/Translation/locales/ar/translation.json
@@ -27,5 +27,6 @@
     "book": " حجز ",
     "ok": " موافق ",
     "close": " اغلاق ",
-    "exist-alert": "Are You Sure To Exist Queue ?"
+    "exist-alert": "Are You Sure To Exist Queue ?",
+    "search": " ابحث عن مكان "
 }
