Update Book Turn

--- a/app/Translation/locales/ar/translation.json
+++ b/app/Translation/locales/ar/translation.json
@@ -28,5 +28,6 @@
     "ok": " موافق ",
     "close": " اغلاق ",
     "exist-alert": "Are You Sure To Exist Queue ?",
-    "search": " ابحث عن مكان "
+    "search": " ابحث عن مكان ",
+    "select-your-service": " اختر خدمتك "
 }
