--- a/app/Translation/locales/en/translation.json
+++ b/app/Translation/locales/en/translation.json
@@ -32,5 +32,8 @@
     "select-your-service": "Select Your Service",
     "no-queues": "No Queues Available",
     "loading": "Loading...",
-    "book-confirm": "Are You Sure To Book Queue in This Place ?"
+    "book-confirm": "Are You Sure To Book Queue in This Place ?",
+    "no-clients": "No Clients",
+    "your-turn-now": "Your Turn Now",
+    "noHistoryFound": "No History Found"
 }
