--- a/app/Translation/locales/ar/translation.json
+++ b/app/Translation/locales/ar/translation.json
@@ -35,5 +35,7 @@
      "book-confirm": " هل تريد حجز دور في هذا المكان ؟ ",
      "no-clients": " لا يوجد عملاء في الانتظار ",
      "your-turn-now": " انت في وقتك الان ",
-     "noHistoryFound": " لا يوجد سجلات "
+     "noHistoryFound": " لا يوجد سجلات ",
+     "help-title":" ارسل رسالتك الى المساعدة ",
+     "send":" ارسل "
 }
