--- a/app/Translation/locales/ar/translation.json
+++ b/app/Translation/locales/ar/translation.json
@@ -32,10 +32,26 @@
     "select-your-service": " اختر خدمتك ",
     "no-queues": " لا يوجد انتظارات ",
     "loading": " جاري التحميل ",
-     "book-confirm": " هل تريد حجز دور في هذا المكان ؟ ",
-     "no-clients": " لا يوجد عملاء في الانتظار ",
-     "your-turn-now": " انت في وقتك الان ",
-     "noHistoryFound": " لا يوجد سجلات ",
-     "help-title":" ارسل رسالتك الى المساعدة ",
-     "send":" ارسل "
+    "book-confirm": " هل تريد حجز دور في هذا المكان ؟ ",
+    "no-clients": " لا يوجد عملاء في الانتظار ",
+    "your-turn-now": " انت في وقتك الان ",
+    "noHistoryFound": " لا يوجد سجلات ",
+    "help-title": " ارسل رسالتك الى المساعدة ",
+    "send": " ارسل ",
+    "help-send-success": " تم الارسال بنجاح ",
+    "send-error": " خطأ في الارسال ",
+     "topic":" الموضوع ",
+    "message":" الرسالة ",
+    "email":" الايميل ",
+    "password":" كلمة المرور ",
+    "login":" تسجيل الدخول ",
+    "register":" انشاء حساب ",
+    "no-account":" ليس لديك حساب ؟ ",
+    "login-with-google":" الدخول بواسطة جوجل ",
+    "login-with-apple":" الدخول بواسطة ابل ",
+    "or":" او ",
+    "name":" الاسم ",
+    "phone":" الهاتف ",
+    "address":" العنوان ",
+    "confirm-password":" تاكيد كلمة المرور "
 }
