--- a/app/Translation/locales/en/translation.json
+++ b/app/Translation/locales/en/translation.json
@@ -37,5 +37,22 @@
     "your-turn-now": "Your Turn Now",
     "noHistoryFound": "No History Found",
     "help-title":" Send your Message ",
-    "send":"Send"
+    "send":"Send",
+    "help-send-success":"Your Message has been sent successfully",
+    "send-error":"Error in sending message",
+    "topic":"Topic",
+    "message":"Message",
+    "email":"Email",
+    "password":"Password",
+    "login":"Login",
+    "register":"Register",
+    "no-account":"Don't have an account ? ",
+    "login-with-google":"Login with Google",
+    "login-with-apple":"Login with Google",
+    "or":"or",
+    "name":"Name",
+    "phone":"Phone",
+    "address":"Address",
+    "confirm-password":"Confirm Password"
+
 }
