--- a/app/Translation/locales/ar/translation.json
+++ b/app/Translation/locales/ar/translation.json
@@ -40,18 +40,19 @@
     "send": " ارسل ",
     "help-send-success": " تم الارسال بنجاح ",
     "send-error": " خطأ في الارسال ",
-     "topic":" الموضوع ",
-    "message":" الرسالة ",
-    "email":" الايميل ",
-    "password":" كلمة المرور ",
-    "login":" تسجيل الدخول ",
-    "register":" انشاء حساب ",
-    "no-account":" ليس لديك حساب ؟ ",
-    "login-with-google":" الدخول بواسطة جوجل ",
-    "login-with-apple":" الدخول بواسطة ابل ",
-    "or":" او ",
-    "name":" الاسم ",
-    "phone":" الهاتف ",
-    "address":" العنوان ",
-    "confirm-password":" تاكيد كلمة المرور "
+    "topic": " الموضوع ",
+    "message": " الرسالة ",
+    "email": " الايميل ",
+    "password": " كلمة المرور ",
+    "login": " تسجيل الدخول ",
+    "register": " انشاء حساب ",
+    "no-account": " ليس لديك حساب ؟ ",
+    "login-with-google": " الدخول بواسطة جوجل ",
+    "login-with-apple": " الدخول بواسطة ابل ",
+    "or": " او ",
+    "name": " الاسم ",
+    "phone": " الهاتف ",
+    "address": " العنوان ",
+    "confirm-password": " تاكيد كلمة المرور ",
+    "need-help": " احتاج مساعده "
 }
