--- a/app/Translation/locales/ar/translation.json
+++ b/app/Translation/locales/ar/translation.json
@@ -54,5 +54,6 @@
     "phone": " الهاتف ",
     "address": " العنوان ",
     "confirm-password": " تاكيد كلمة المرور ",
-    "need-help": " احتاج مساعده "
+    "need-help": " احتاج مساعده ",
+    "added-to-favourite": " تمت الاضافه للمفضلة "
 }
