--- a/app/Translation/locales/en/translation.json
+++ b/app/Translation/locales/en/translation.json
@@ -27,7 +27,7 @@
     "book": "BOOK",
     "ok": "OK",
     "close": "CLOSE",
-    "exist-alert": "Are You Sure To Exist Queue ?",
+    "exist-alert": "are you sure to exist queue ?",
     "search": "Search For Place",
     "select-your-service": "Select Your Service",
     "no-queues": "No Queues Available",
@@ -55,6 +55,24 @@
     "address":"Address",
     "confirm-password":"Confirm Password",
     "need-help":"Need Help",
-    "added-to-favourite":"Added to Favourite"
+    "added-to-favourite":"Added to Favourite",
+    "error":"Error Happened",
+    "try-again":"Please try again",
+    "email-required":"Email is required",
+    "password-required":"Password is required",
+    "name-required":"Name is required",
+    "register-success":"Registered Successfully",
+    "welcome-to-app":"Welcome to Our App",
+    "login-success":"Login Successfully",
+    "queue-cancel-success":"Queue Cancelled Successfully",
+    "queue-cancel-error":"Error in canceling queue",
+    "move-alert":"are you sure to move queue to back ?",
+    "exit-success":"Exit Successfully",
+    "exit-error":"Error in exiting",
+    "your-info-updated-successfully":"Your Information Updated Successfully",
+    "error-in-updating-info":"Error in updating information",
+    "delete-account-alert":"are you sure to delete your account ?",
+    "delete-account-success":"Account Deleted Successfully",
+    "logout-success":"Logout Successfully"
 
 }
