update home screen

--- a/app/Translation/locales/ar/translation.json
+++ b/app/Translation/locales/ar/translation.json
@@ -1,81 +1,82 @@
 {
-    "account": " الملف الشخصي",
-    "favourite": " المفضلة ",
-    "history": " سجل الطلبات",
-    "my-queue": " قائمة الانتظار ",
-    "notifications": " الاشعارات ",
-    "home": " الرئيسية ",
-    "business": " الاعمال ",
-    "help": " المساعدة ",
-    "settings": " الاعدادات ",
-    "inbox": " الرسائل ",
-    "how-to-use": " كيفية استخدام التطبيق ",
-    "my-queues": " قائمة الانتظار ",
-    "moveQueue": " تحويل الانتظار ",
-    "exitQueue": " خروج من الانتظار ",
-    "head-of-queue": " الانتظار ",
-    "your-number": " رقمك ",
-    "now-serving": " الان يخدم ",
-    "estimate-time": " الوقت المقدر ",
-    "update-your-information": " تحديث معلوماتك ",
-    "logout": " تسجيل الخروج ",
-    "delete-account": " حذف الحساب ",
-    "setting": " الاعدادات ",
-    "change_to_dark": " تغيير الوضع الليلي ",
-    "change_to_light": " تغيير الوضع النهاري ",
-    "clients-in-queue": " العملاء في الانتظار ",
-    "book": " حجز ",
-    "ok": " موافق ",
-    "close": " اغلاق ",
-    "exist-alert": "Are You Sure To Exist Queue ?",
-    "search": " ابحث عن مكان ",
-    "select-your-service": " اختر خدمتك ",
-    "no-queues": " لا يوجد انتظارات ",
-    "loading": " جاري التحميل ",
-    "book-confirm": " هل تريد حجز دور في هذا المكان ؟ ",
-    "no-clients": " لا يوجد عملاء في الانتظار ",
-    "your-turn-now": " انت في وقتك الان ",
-    "noHistoryFound": " لا يوجد سجلات ",
-    "help-title": " ارسل رسالتك الى المساعدة ",
-    "send": " ارسل ",
-    "help-send-success": " تم الارسال بنجاح ",
-    "send-error": " خطأ في الارسال ",
-    "topic": " الموضوع ",
-    "message": " الرسالة ",
-    "email": " الايميل ",
-    "password": " كلمة المرور ",
-    "login": " تسجيل الدخول ",
-    "register": " انشاء حساب ",
-    "no-account": " ليس لديك حساب ؟ ",
-    "login-with-google": " الدخول بواسطة جوجل ",
-    "login-with-apple": " الدخول بواسطة ابل ",
-    "or": " او ",
-    "name": " الاسم ",
-    "phone": " الهاتف ",
-    "address": " العنوان ",
-    "confirm-password": " تاكيد كلمة المرور ",
-    "need-help": " احتاج مساعده ",
-    "added-to-favourite": " تمت الاضافه للمفضلة ",
-    "error": "حدث خطأ",
-    "try-again": "يرجى المحاولة مرة أخرى",
-    "email-required": "يرجى إدخال عنوان بريدك الإلكتروني.",
-    "password-required": "يرجى إدخال كلمة المرور.",
-    "name-required": " يرجى إدخال الاسم.",
-    "register-success": "تم التسجيل بنجاح.",
-    "welcome-to-app": "مرحباً بك في تطبيقنا.",
-    "login-success": "تم تسجيل الدخول بنجاح.",
-    "queue-cancel-success": "تم إلغاء دورك بنجاح",
-    "queue-cancel-error": "حدث خطأ أثناء إلغاء الصف",
-    "move-alert": "هل أنت متأكد من نقل دورك إلى الخلف؟",
-    "exit-success": "تم الخروج بنجاح",
-    "exit-error": "حدث خطأ أثناء الخروج",
-    "your-info-updated-successfully":" تم تحديث معلوماتك بنجاح",
-    "error-in-updating-info":"حدث خطاء في تحديث معلوماتك",
-      "delete-account-alert":" هل تريد حذف الحساب ؟",
-    "delete-account-success":" تم حذف الحساب بنجاح",
-    "logout-success":" تم تسجيل الخروج بنجاح",
-    "inbox-empty":" البريد الوارد فارغ ",
-    "send-help": "ارسل رسالة للمساعدة",
-    "no-reply":" لم ينم الرد "
-    
+  "account": " الملف الشخصي",
+  "favourite": " المفضلة ",
+  "history": " سجل الطلبات",
+  "my-queue": " قائمة الانتظار ",
+  "notifications": " الاشعارات ",
+  "home": " الرئيسية ",
+  "business": " الاعمال ",
+  "help": " المساعدة ",
+  "settings": " الاعدادات ",
+  "inbox": " الرسائل ",
+  "how-to-use": " كيفية استخدام التطبيق ",
+  "my-queues": " قائمة الانتظار ",
+  "moveQueue": " تحويل الانتظار ",
+  "exitQueue": " خروج من الانتظار ",
+  "head-of-queue": " الانتظار ",
+  "your-number": " رقمك ",
+  "now-serving": " الان يخدم ",
+  "estimate-time": " الوقت المقدر ",
+  "update-your-information": " تحديث معلوماتك ",
+  "logout": " تسجيل الخروج ",
+  "delete-account": " حذف الحساب ",
+  "setting": " الاعدادات ",
+  "change_to_dark": " تغيير الوضع الليلي ",
+  "change_to_light": " تغيير الوضع النهاري ",
+  "clients-in-queue": " العملاء في الانتظار ",
+  "book": " حجز ",
+  "ok": " موافق ",
+  "close": " اغلاق ",
+  "exist-alert": "Are You Sure To Exist Queue ?",
+  "search": " ابحث عن مكان ",
+  "select-your-service": " اختر خدمتك ",
+  "no-queues": " لا يوجد انتظارات ",
+  "loading": " جاري التحميل ",
+  "book-confirm": " هل تريد حجز دور في هذا المكان ؟ ",
+  "no-clients": " لا يوجد عملاء في الانتظار ",
+  "your-turn-now": " انت في وقتك الان ",
+  "noHistoryFound": " لا يوجد سجلات ",
+  "help-title": " ارسل رسالتك الى المساعدة ",
+  "send": " ارسل ",
+  "help-send-success": " تم الارسال بنجاح ",
+  "send-error": " خطأ في الارسال ",
+  "topic": " الموضوع ",
+  "message": " الرسالة ",
+  "email": " الايميل ",
+  "password": " كلمة المرور ",
+  "login": " تسجيل الدخول ",
+  "register": " انشاء حساب ",
+  "no-account": " ليس لديك حساب ؟ ",
+  "login-with-google": " الدخول بواسطة جوجل ",
+  "login-with-apple": " الدخول بواسطة ابل ",
+  "or": " او ",
+  "name": " الاسم ",
+  "phone": " الهاتف ",
+  "address": " العنوان ",
+  "confirm-password": " تاكيد كلمة المرور ",
+  "need-help": " احتاج مساعده ",
+  "added-to-favourite": " تمت الاضافه للمفضلة ",
+  "removed-from-favourite": " تمت الازالة من المفضلة ",
+  "error": "حدث خطأ",
+  "try-again": "يرجى المحاولة مرة أخرى",
+  "email-required": "يرجى إدخال عنوان بريدك الإلكتروني.",
+  "password-required": "يرجى إدخال كلمة المرور.",
+  "name-required": " يرجى إدخال الاسم.",
+  "register-success": "تم التسجيل بنجاح.",
+  "welcome-to-app": "مرحباً بك في تطبيقنا.",
+  "login-success": "تم تسجيل الدخول بنجاح.",
+  "queue-cancel-success": "تم إلغاء دورك بنجاح",
+  "queue-cancel-error": "حدث خطأ أثناء إلغاء الصف",
+  "move-alert": "هل أنت متأكد من نقل دورك إلى الخلف؟",
+  "exit-success": "تم الخروج بنجاح",
+  "exit-error": "حدث خطأ أثناء الخروج",
+  "your-info-updated-successfully": " تم تحديث معلوماتك بنجاح",
+  "error-in-updating-info": "حدث خطاء في تحديث معلوماتك",
+  "delete-account-alert": " هل تريد حذف الحساب ؟",
+  "delete-account-success": " تم حذف الحساب بنجاح",
+  "logout-success": " تم تسجيل الخروج بنجاح",
+  "inbox-empty": " البريد الوارد فارغ ",
+  "send-help": "ارسل رسالة للمساعدة",
+  "no-reply": " لم ينم الرد ",
+  "please-wait": " يرجى الانتظار "
 }
