--- a/app/Translation/locales/en/translation.json
+++ b/app/Translation/locales/en/translation.json
@@ -56,6 +56,7 @@
     "confirm-password":"Confirm Password",
     "need-help":"Need Help",
     "added-to-favourite":"Added to Favourite",
+    "removed-from-favourite":"Removed from Favourite",
     "error":"Error Happened",
     "try-again":"Please try again",
     "email-required":"Email is required",
@@ -76,6 +77,7 @@
     "logout-success":"Logout Successfully",
     "inbox-empty":"Inbox Empty",
     "send-help":"Send Help",
-    "no-reply":" still not reply "
+    "no-reply":" still not reply ",
+    "please-wait":"Please wait"
 
 }
