update Queue Screeen

--- a/app/Translation/locales/en/translation.json
+++ b/app/Translation/locales/en/translation.json
@@ -77,7 +77,7 @@
     "logout-success":"Logout Successfully",
     "inbox-empty":"Inbox Empty",
     "send-help":"Send Help",
-    "no-reply":" still not reply ",
+    "no-reply":" Please wait for reply",
     "please-wait":"Please wait"
 
 }
