--- a/app/Translation/locales/ar/translation.json
+++ b/app/Translation/locales/ar/translation.json
@@ -77,6 +77,6 @@
   "logout-success": " تم تسجيل الخروج بنجاح",
   "inbox-empty": " البريد الوارد فارغ ",
   "send-help": "ارسل رسالة للمساعدة",
-  "no-reply": " لم ينم الرد ",
+  "no-reply": " يرجى الانتظار للاستجابة",
   "please-wait": " يرجى الانتظار "
 }
