--- a/app/Translation/locales/ar/translation.json
+++ b/app/Translation/locales/ar/translation.json
@@ -79,5 +79,7 @@
   "send-help": "ارسل رسالة للمساعدة",
   "no-reply": " يرجى الانتظار للاستجابة",
   "please-wait": " يرجى الانتظار ",
-   "no-time-to-wait":" لا يوجد وقت للانتظار"
+  "no-time-to-wait": " لا يوجد وقت للانتظار",
+  "invalid-email": " البريد الالكتروني غير صالح",
+  "min-6" : " كلمة المرور يجب ان تكون على الاقل 6 حروف"
 }
