--- a/app/Translation/locales/ar/translation.json
+++ b/app/Translation/locales/ar/translation.json
@@ -81,5 +81,9 @@
   "please-wait": " يرجى الانتظار ",
   "no-time-to-wait": " لا يوجد وقت للانتظار",
   "invalid-email": " البريد الالكتروني غير صالح",
-  "min-6" : " كلمة المرور يجب ان تكون على الاقل 6 حروف"
+  "min-6": " كلمة المرور يجب ان تكون على الاقل 6 حروف",
+  "select-place": " اختر مكان ",
+  "booking....": " جاري الحجز .... ",
+  "queue-move-success": " تم نقل دورك إلى الخلف بنجاح",
+  "queue-move-error": " حدث خطأ أثناء نقل دورك إلى الخلف"
 }
