Big Update For UI

--- a/app/Translation/locales/ar/translation.json
+++ b/app/Translation/locales/ar/translation.json
@@ -85,5 +85,11 @@
   "select-place": " اختر مكان ",
   "booking....": " جاري الحجز .... ",
   "queue-move-success": " تم نقل دورك إلى الخلف بنجاح",
-  "queue-move-error": " حدث خطأ أثناء نقل دورك إلى الخلف"
+  "queue-move-error": " حدث خطأ أثناء نقل دورك إلى الخلف",
+  "book-queue": " حجز دور",
+  "login-error": " خطأ في تسجيل الدخول",
+  "login-error-message": " البريد الإلكتروني أو كلمة المرور غير صحيحة، يرجى المحاولة مرة أخرى",
+  "register-error": " خطأ في التسجيل",
+  "login-success-message": " تسجيل الدخول ناجح، مرحبًا بعودتك!",
+  "egister-error-message": " يرجى التحقق من التفاصيل الخاصة بك والمحاولة مرة أخرى"
 }
